# AutoGrid

./: .cpp  CMakeLists.txt  Cargo.toml  README.md  build.sh  main.py  replit.md
src/: advanced_forecasting.py  ai_engine.py  blockchain_trading.py  coordinator.rs  cybersecurity.py  embedded_controller.cpp  iot_integration.py  performance_optimizer.py
utils/: data_generator.py  ml_forecasting.py  optimization.py  trading_engine.py
